# PhsyikFun

./: .gitignore  CMakeLists.txt  README.md
Potential/: CentralPotential.c
Potential/include/: Entity.h  Potential.h  System.h  Vector.h
apps/: CMakeLists.txt  Gravitation.cpp  Reibung.cpp  ThreeBody.cpp  main.cpp  mainPlot.py
include/: Constants.h  Entity.h  Evaluator.h  Impact.h  Integrator.h  Interactions.h  MathHelpers.h  NumericNewontDGLSolver.h  Potential.h  Printer.h  PropertyCalculus.h  System.h  SystemCore.h  Vector.h
include/Datastructures/: ThreadSaveQueue.h
src/: CMakeLists.txt  Potential.cpp
src/System/: AsyncCSVPrinter.cpp  CSVFileWriter.cpp  CSVPrinter.cpp  ClassicalSystemCore.cpp  ConsolePrinter.cpp  ElasticImpact.cpp  FilePrinter.cpp  NumericNewton.cpp  PropertyCalculus.cpp  System.cpp  WorldEvaluator.cpp
stillebank/: test.c
tests/: CMakeLists.txt  hope.cpp
